# 3SH3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Lab 1/: README.md  main  main.cpp
Lab 2/: README.md  fork.cpp  main.cpp  pipe.cpp
Lab 3/: main.cpp  main_cvar.cpp
Lab 4/: alloc.cpp  lab4.h  mmap_example.cpp  prov-rep.cpp
Lab 5/: main.cpp  proper_dir_traversal.cpp  will_this_print.txt
Lab 5/test2/: c  testfile.txt
